@@ -7,18 +7,25 @@ quota \- display disk usage and limits
 .B -F
 .I format-name
 ] [
-.BR -guvsilw \ |
-.B q
-]
+.B -guqvswi
+] [
+.BR -l \ |
+[
+.BR -Q \ |\  -A
+]]
 .br
 .B quota
 [
 .B -F
 .I format-name
 ] [
-.BR -uvsilw \ |
-.B q
-]
+.B -qvswi
+] [
+.BR -l \ |
+[
+.BR -Q \ |\  -A
+]]
+.B -u
 .IR user ...
 .br
 .B quota
@@ -26,10 +33,24 @@ quota \- display disk usage and limits
 .B -F
 .I format-name
 ] [
-.BR -gvsilw \ |
-.B q
-]
+.B -qvswi
+] [
+.BR -l \ |
+[
+.BR -Q \ |\  -A
+]]
+.B -g
 .IR group ...
+.br
+.B quota
+[
+.B -F
+.I format-name
+] [
+.B -qvswugQ
+]
+.B -f
+.IR filesystem ...
 .SH DESCRIPTION
 .B quota
 displays users' disk usage and limits.
@@ -78,6 +99,10 @@ ignore mountpoints mounted by automounter
 .TP
 .B -l, --local-only
 report quotas only on local filesystems (ie. ignore NFS mounted filesystems).
+.TP
+.B -A, --all-nfs
+report quotas for all NFS filesystems even if they report to be on the same
+device.
 .TP
 .B -q, --quiet
 Print a more terse message,
