@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.14 to 3.15
+* added option -A to quota(1) to report all NFS mountpoints (Jan Kara)
 * fixed XFS handling to work with loopback mounted devices (Jan Kara)
 * fixed mountpoints scanning to make XFS -x delete command work (Jan Kara)
 * fixes of signed vs unsigned int issues (Jan Kara)
